2001-12-18  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>

	* [w3m-dev 02670]
	* table.c (maximum_visible_length): use strchr()
	* table.c (do_refill): use force==2 mode for flushline()

2001-12-18  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02669] delete cURLcode()
	* main.c (cURLcode): deleted
	* main.c (loadNormalBuf): no need to use cURLcode()
	* main.c (followI): ditto
	* main.c (query_from_followform): need conv_form_encoding()

2001-12-18  Rin Okuyama <okuyama@cna.ne.jp>

	* [w3m-dev 02668] install-sh: -e option of sh(1)
	* install-sh: add set -e

2001-12-18   Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02667]
	* terms.c (mouse_init): #ifdef SIGWINCH guard

2001-12-16  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02666] resizing on xterm with gpm support
	* terms.c (mouse_init): check Gpm_Open return value, signal(SIGWINCH)

2001-12-16  Rin Okuyama <okuyama@cna.ne.jp>

	* [w3m-dev 02664] install-sh -s option
	* XMakefile: install-sh -s
	* install-sh: support strip option

2001-12-15  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02663] fix prevA() cause loop
	* table.c (do_refill): force flushline
	* table.c (feed_table_tag): push line if <a> has no href attr

2001-12-15  Rin Okuyama <okuyama@cna.ne.jp>

	* [w3m-dev 02659] rc.c (show_srch_str)
	* fm.h (show_srch_str): added
	* main.c (srch_nxtprv): check show_srch_str
	* rc.c (CMT_SHOW_SRCH_STR): added

2001-12-15  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>

	* [w3m-dev 02657] 
	* main.c (chkURL): accept URL ending with '='

2001-12-15  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>

	* [w3m-dev 02656]
	* XMakefile (clean): remove functable.c
	* anchor.c (_put_anchor_new): use Strnew_size() and Strcat_charp_n()
	* indep.c (getescapechar): use GET_MYCDIGIT

2001-12-13  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>

	* [w3m-dev 02541] mouse support on cygwin
	* linein.c (_esc): ignore ESC M <ch> <ch> <ch> on cygwin
	* terms.c (is_xterm): not static on cygwin